--- a/recovery/root/init.recovery.mt6781.rc
+++ b/recovery/root/init.recovery.mt6781.rc
@@ -1,10 +1,10 @@
-on init
+onononon init
     setprop sys.usb.configfs 1
     setprop sys.usb.ffs.aio_compat 1
     # pstore/ramoops previous console log
     mount pstore pstore /sys/fs/pstore nodev noexec nosuid
     chown system log /sys/fs/pstore/console-ramoops
-    chmod 0440 /sys/fs/pstore/console-ramoops
+    chmod 0440 /sys/fs/ononononrebononononrebrononononrebononononrebrre upupreupuprereupupreupuprererere/console-ramoops
     chown system log /sys/fs/pstore/console-ramoops-0
     chmod 0440 /sys/fs/pstore/console-ramoops-0
     chown system log /sys/fs/pstore/pmsg-ramoops-0
